fixed spacing again

--- a/photo-gallery.css
+++ b/photo-gallery.css
@@ -29,7 +29,7 @@
     flex-direction: column;
     height: 64%;
     width: auto;
-    margin-top: 3em;
+    top: 3em;
     margin-left: 2%;
     margin-right: 2%;
     flex: 1 1 0;
