--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ nav .five:hover {
 
     #column-2 {
         position: relative;
-        top: 4em;
+        margin-top: 4em;
     }
 
     .column-2-item {
